// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inset component should render with content when passed 1`] = `
<p
  class="govuk-inset-text"
>
  Testing the Inset component 
</p>
`;

exports[`Inset component should render with default props 1`] = `
<p
  class="govuk-inset-text"
>
   
</p>
`;
